src/objects/HOG_Interface_Monitoring_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ActivityId__c</fullName>
        <label>ActivityId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Number__c</fullName>
        <label>Activity Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Statuses_to_Toggle__c</fullName>
        <label>Activity Statuses to Toggle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Activity_Status__c</fullName>
        <label>Expected Activity Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Log__c</fullName>
        <label>Job Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_on_Failure__c</fullName>
        <label>Email Addresses to Notify on Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Between_Job_Runs__c</fullName>
        <label>Time Between Job Runs (min)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Number__c</fullName>
        <label>Work Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>HOG Interface Monitoring Settings</label>
</CustomObject>